--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <span class="span1">Decision Support System </span>Spatial Watershed
         Management Information System
         <span class="span2">(Bihar PMKSY 2.0)</span>
+        <marquee
+        loop="-1" Scrolldelay=10>Watershed analysis is used for the management nad planning of natural
+          resource: To provide necessary inputs for hydrological modeling, Flood
+          prediction modeling and snow melt runoff models etc., Watershed
+          analysis provides catchment boundaries but also hydrological
+          parameters useful for management progress
+        </marquee>
       </p>
     </header>
 
@@ -253,7 +260,7 @@
                       Single Query
                     </button>
                     <div class="attQueryDiv" id="attQueryDiv">
-                      <div class="headerDiv" id="headerDiv">
+                      <div class="queryHeaderDiv" id="queryHeaderDiv">
                         <label for="">Single Attribute Query</label>
                       </div>
                       <br />
@@ -294,7 +301,7 @@
                       Multiple Query
                     </button>
                     <div class="multiAttQueryDiv" id="multiAttQueryDiv">
-                      <div class="headerDiv" id="headerDiv">
+                      <div class="queryHeaderDiv" id="queryHeaderDiv">
                         <label for="">Multiple Attribute Query</label>
                       </div>
                       <br />
