--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         Management Information System
         <span class="span2">(Bihar PMKSY 2.0)</span>
         <marquee
-        loop="-1" Scrolldelay=10>Watershed analysis is used for the management nad planning of natural
+        loop="-1" Scrolldelay=10>Watershed analysis is used for the management And planning of natural
           resource: To provide necessary inputs for hydrological modeling, Flood
           prediction modeling and snow melt runoff models etc., Watershed
           analysis provides catchment boundaries but also hydrological
