Terrain legends added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <b>Legend</b>
       </p>
       <p id="infoLigend"></p>
+      <p id="infoLigendTerrain"></p>
     </div>
     <header>
       <img
@@ -34,16 +35,16 @@
         <span class="span1">Decision Support System </span>Spatial Watershed
         Management Information System
         <span class="span2">(Bihar PMKSY 2.0)</span>
-        <marquee
-        loop="-1" Scrolldelay=10>Watershed analysis is used for the management and planning of natural
-          resource: To provide necessary inputs for hydrological modeling, Flood
-          prediction modeling and snow melt runoff models etc., Watershed
-          analysis provides catchment boundaries but also hydrological
-          parameters useful for management progress.
-        </marquee>
+        
       </p>
     </header>
-
+    <marquee
+    loop="-1" Scrolldelay=10>Watershed analysis is used for the management and planning of natural
+      resource: To provide necessary inputs for hydrological modeling, Flood
+      prediction modeling and snow melt runoff models etc., Watershed
+      analysis provides catchment boundaries but also hydrological
+      parameters useful for management progress.
+    </marquee>
     <!-- <div><img src="./photos/home-bg.jpg" style="height: 200px; width: 100%;" alt=""></div> -->
     <div class="main">
       <div class="column left">
