Changes on MultilayerQuery

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </div>
 
         <p class="headerTextDiv">
-          <span class="span1">Decision Support System </span>Spatial Watershed
+          <span class="span1">Pradhan Mantri Krishi Sichayee Yojana<br/> (PMKSY2.0)-Bihar</span>Spatial Watershed
           Management Information System
-          <span class="span2">(Bihar PMKSY 2.0)</span>
+          <span class="span2">Decision Support System </span>
         </p>
 
         <div class="logos2">
@@ -596,7 +596,7 @@
                         type="button"
                         id="attQryRun2"
                         class="attQryRun2"
-                        onclick="multiQuery1()"
+                        onclick="multiQueryRun()"
                       >
                         Run
                       </button>
